# metabase-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: async_health.rs  blocking_health.rs  error_handling.rs
src/: auth.rs  error.rs  lib.rs
src/api/: action.rs  activity.rs  alert.rs  analytics.rs  api_key.rs  automagic_dashboards.rs  bookmark.rs  bug_reporting.rs  cache.rs  card.rs  cards.rs  channel.rs  cloud_migration.rs  collection.rs  dashboard.rs  database.rs  dataset.rs  eid_translation.rs  email.rs  embed.rs  field.rs  geojson.rs  glossary.rs  google.rs  health.rs  ldap.rs  logger.rs  login_history.rs  mod.rs  model_index.rs  native_query_snippet.rs  notification.rs  notification_unsubscribe.rs  notify.rs  permissions.rs  persist.rs  premium_features.rs  preview_embed.rs  product_feedback.rs  public.rs  (+18 more)
src/client/: async_client.rs  blocking_client.rs  config.rs  mod.rs  options.rs  retry.rs  services_async.rs  services_blocking.rs
src/transport/: async_transport.rs  blocking_transport.rs  mod.rs  retry.rs
src/types/: dashboard.rs  health.rs  ids.rs  mod.rs  multipart.rs  path.rs  session.rs  user.rs
src/util/: mod.rs
tests/: blocking_sdk.rs  sdk.rs
